tests/transpiler/x/cpp/in_operator_extended.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/in_operator_extended.cpp:18:28: error: wrong number of template arguments (1, should be at least 2)
   18 | auto m = std::map<auto, int>{{a, 1}};
      |                            ^
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/transpiler/x/cpp/in_operator_extended.cpp:8:
/usr/include/c++/13/bits/stl_map.h:102:11: note: provided for ‘template<class _Key, class _Tp, class _Compare, class _Alloc> class std::map’
  102 |     class map
      |           ^~~
/workspace/mochi/tests/transpiler/x/cpp/in_operator_extended.cpp:18:31: error: ‘a’ was not declared in this scope
   18 | auto m = std::map<auto, int>{{a, 1}};
      |                               ^
